--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hanru Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body data-theme="dark">
@@ -11,7 +17,7 @@
       <div class="header">
         <h1 class="name">Hanru Vorster</h1>
         <p class="profession">Front-end Developer</p>
-        <button class="theme-toggle" id="themeToggle">Toggle Theme</button>
+        <button class="theme-toggle" id="themeToggle">TOGGLE THEME</button>
       </div>
 
       <nav class="nav">
