added info to info modal and added some styling

--- a/index.html
+++ b/index.html
@@ -29,15 +29,30 @@
       <!-- Modals -->
       <div class="modal" id="infoModal">
         <div class="modal-content">
-          <h2>Info</h2>
-          <p>Your bio and information goes here.</p>
-        </div>
-      </div>
-
-      <div class="modal" id="projectsModal">
-        <div class="modal-content">
-          <h2>Projects</h2>
-          <p>Your projects will be listed here.</p>
+          <h2>Personal Information</h2>
+          <p>Hanru Vorster</p>
+          <p>Pretoria, South Africa</p>
+          <p>Tech Stack: HTML, CSS, JavaScript, React</p>
+          <p>
+            <a
+              href="https://github.com/HanruV"
+              class="hidden-link social-link"
+              target="_blank"
+            >
+              <span class="link-text">Github</span>
+              <span class="link-url">github.com/hanruvorster</span>
+            </a>
+          </p>
+          <p>
+            <a
+              href="https://www.linkedin.com/in/hanru-vorster-528a072b3/"
+              class="hidden-link social-link"
+              target="_blank"
+            >
+              <span class="link-text">LinkedIn</span>
+              <span class="link-url">linkedin.com/in/hanruvorster</span>
+            </a>
+          </p>
         </div>
       </div>
 
