updated styles for INFO modal

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
       <div class="modal" id="infoModal">
         <div class="modal-content">
           <h2>Personal Information</h2>
-          <p>Hanru Vorster</p>
-          <p>Pretoria, South Africa</p>
-          <p>Tech Stack: HTML, CSS, JavaScript, React</p>
+          <p class="name-surname">Hanru Vorster</p>
+          <p class="name-place">Pretoria, South Africa</p>
+          <p>
+            <span class="tech-stack">Tech Stack:</span> HTML, CSS, JavaScript,
+            React
+          </p>
           <p>
             <a
               href="https://github.com/HanruV"
@@ -53,6 +56,13 @@
               <span class="link-url">linkedin.com/in/hanruvorster</span>
             </a>
           </p>
+        </div>
+      </div>
+
+      <div class="modal" id="projectsModal">
+        <div class="modal-content">
+          <h2>Projects</h2>
+          <p>Your projects will be listed here.</p>
         </div>
       </div>
 
