added content and styles for contact modal

--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
       <div class="modal" id="contactModal">
         <div class="modal-content">
           <h2>Contact</h2>
-          <p>Your contact information goes here.</p>
+          <p><span class="email-tag">Email: </span>hanru.vorster@gmail.com</p>
+          <p>
+            <a
+              href="https://www.linkedin.com/in/hanru-vorster-528a072b3/"
+              class="hidden-link social-link"
+              target="_blank"
+            >
+              <span class="link-text">LinkedIn</span>
+              <span class="link-url">linkedin.com/in/hanruvorster</span>
+            </a>
+          </p>
         </div>
       </div>
     </div>
