added contnet and styles to the projects modal

--- a/index.html
+++ b/index.html
@@ -62,26 +62,38 @@
       <div class="modal" id="projectsModal">
         <div class="modal-content">
           <h2>Projects</h2>
-          <p>Your projects will be listed here.</p>
-        </div>
-      </div>
+          
+          <div class="project-item">
+            <h3>Project 1</h3>
+            <p class="project-description">Project 1 does the following and it is nice</p>
+            <p class="tech-stack">Tech Stack: HTML, CSS, JavaScript</p>
+            <div class="project-links">
+              <a href="https://github.com/hanruvorster/portfolio" class="hidden-link social-link" target="_blank" rel="noopener noreferrer">
+                <span class="link-text">Github</span>
+                <span class="link-url">github.com/hanruvorster/portfolio</span>
+              </a>
+              <a href="https://hanruvorster.github.io/portfolio" class="hidden-link social-link" target="_blank" rel="noopener noreferrer">
+                <span class="link-text">Live Demo</span>
+                <span class="link-url">hanruvorster.github.io/portfolio</span>
+              </a>
+            </div>
+          </div>
 
-      <div class="modal" id="contactModal">
-        <div class="modal-content">
-          <h2>Contact</h2>
-          <p><span class="email-tag">Email: </span>hanru.vorster@gmail.com</p>
-          <p>
-            <a
-              href="https://www.linkedin.com/in/hanru-vorster-528a072b3/"
-              class="hidden-link social-link"
-              target="_blank"
-            >
-              <span class="link-text">LinkedIn</span>
-              <span class="link-url">linkedin.com/in/hanruvorster</span>
-            </a>
-          </p>
-        </div>
-      </div>
+          <div class="project-item">
+            <h3>Project 2</h3>
+            <p class="project-description">Project 2 does the following and it is nice</p>
+            <p class="tech-stack">Tech Stack: React, Weather API</p>
+            <div class="project-links">
+              <a href="https://github.com/hanruvorster/weather-app" class="hidden-link social-link" target="_blank" rel="noopener noreferrer">
+                <span class="link-text">Github</span>
+                <span class="link-url">github.com/hanruvorster/weather-app</span>
+              </a>
+              <a href="https://hanruvorster.github.io/weather-app" class="hidden-link social-link" target="_blank" rel="noopener noreferrer">
+                <span class="link-text">Live Demo</span>
+                <span class="link-url">hanruvorster.github.io/weather-app</span>
+              </a>
+            </div>
+          </div>
     </div>
     <script src="./script.js"></script>
   </body>
