--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="project-item">
             <h3>Project 1</h3>
             <p class="project-description">Project 1 does the following and it is nice</p>
-            <p class="tech-stack">Tech Stack: HTML, CSS, JavaScript</p>
+            <p ><span class="tech-stack">Tech Stack: </span>React, Weather API</p>
             <div class="project-links">
               <a href="https://github.com/hanruvorster/portfolio" class="hidden-link social-link" target="_blank" rel="noopener noreferrer">
                 <span class="link-text">Github</span>
@@ -82,7 +82,7 @@
           <div class="project-item">
             <h3>Project 2</h3>
             <p class="project-description">Project 2 does the following and it is nice</p>
-            <p class="tech-stack">Tech Stack: React, Weather API</p>
+            <p ><span class="tech-stack">Tech Stack: </span>React, Weather API</p>
             <div class="project-links">
               <a href="https://github.com/hanruvorster/weather-app" class="hidden-link social-link" target="_blank" rel="noopener noreferrer">
                 <span class="link-text">Github</span>
