added a close button to modals and functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <!-- Modals -->
       <div class="modal" id="infoModal">
         <div class="modal-content">
+          <button class="close-modal" aria-label="Close Modal">X</button>
           <h2>Personal Information</h2>
           <p class="name-surname">Hanru Vorster</p>
           <p class="name-place">Pretoria, South Africa</p>
@@ -61,6 +62,7 @@
 
       <div class="modal" id="projectsModal">
         <div class="modal-content">
+          <button class="close-modal" aria-label="Close Modal">X</button>
           <h2>Projects</h2>
 
           <div class="project-item">
@@ -130,6 +132,7 @@
       <!-- Contact modal -->
       <div class="modal" id="contactModal">
         <div class="modal-content">
+          <button class="close-modal" aria-label="Close Modal">X</button>
           <h2>Contact</h2>
           <p><span class="email-tag">Email: </span>hanru.vorster@gmail.com</p>
           <p>
