added some projects

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
           <h2>Projects</h2>
 
           <div class="project-item">
-            <h3>Project 1</h3>
-            <p class="project-description">
-              Project 1 does the following and it is nice
-            </p>
+            <h3>Pig Game</h3>
+            <p class="project-description">A split-screen dice game.</p>
             <p>
-              <span class="tech-stack">Tech Stack: </span>React, Weather API
+              <span class="tech-stack">Tech Stack: </span>HTML, CSS, JavaScript
             </p>
             <div class="project-links">
               <a
-                href="https://github.com/hanruvorster/portfolio"
+                href="https://github.com/HanruV/Pig-Game.git"
                 class="hidden-link social-link"
                 target="_blank"
                 rel="noopener noreferrer"
               >
                 <span class="link-text">Github</span>
-                <span class="link-url">github.com/hanruvorster/portfolio</span>
+                <span class="link-url"
+                  >https://github.com/HanruV/Pig-Game.git</span
+                >
               </a>
               <a
                 href="https://hanruvorster.github.io/portfolio"
@@ -96,23 +96,24 @@
           </div>
 
           <div class="project-item">
-            <h3>Project 2</h3>
+            <h3>Bank App</h3>
             <p class="project-description">
-              Project 2 does the following and it is nice
+              Simple app to view balances, make transfers, and requaest loans:
+              An exercise in JS methods
             </p>
             <p>
-              <span class="tech-stack">Tech Stack: </span>React, Weather API
+              <span class="tech-stack">Tech Stack: </span>HTML, CSS, JavaScript
             </p>
             <div class="project-links">
               <a
-                href="https://github.com/hanruvorster/weather-app"
+                href="https://github.com/HanruV/Banking-App.git"
                 class="hidden-link social-link"
                 target="_blank"
                 rel="noopener noreferrer"
               >
                 <span class="link-text">Github</span>
                 <span class="link-url"
-                  >github.com/hanruvorster/weather-app</span
+                  >https://github.com/HanruV/Banking-App.git</span
                 >
               </a>
               <a
