added live demo pig game

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 >
               </a>
               <a
-                href="https://hanruvorster.github.io/portfolio"
+                href="https://hanruv.github.io/Pig-Game/"
                 class="hidden-link social-link"
                 target="_blank"
                 rel="noopener noreferrer"
