added banking app live demo

--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
                 >
               </a>
               <a
-                href="https://hanruvorster.github.io/weather-app"
+                href="https://hanruv.github.io/Banking-App/"
                 class="hidden-link social-link"
                 target="_blank"
                 rel="noopener noreferrer"
               >
                 <span class="link-text">Live Demo</span>
-                <span class="link-url">hanruvorster.github.io/weather-app</span>
+                <span class="link-url"
+                  >https://hanruv.github.io/Banking-App/</span
+                >
               </a>
             </div>
           </div>
